# benchmarking-n-profiling-

./: .gitignore  README.md  gpu_benchmark  notes.txt  spmv_benchmark
cpp/: CMakeLists.txt  basicK.cu  gpu_gemm.cu  gpu_radixfft.cu  gpu_spMV.cu  gpu_stream.cpp  roofline_gstream.cu  roofline_spMV.cpp  roofline_stream.cpp
python/: analyze.py
